// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-ztyk6h"
  >
     
    <span>
      Default
    </span>
  </button>
</section>
`;

exports[`Storyshots Components/Button Large Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-ztyk6h iconOnly large"
  >
    <i
      class="material-icons svelte-ztyk6h"
    >
      play_arrow
    </i>
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Large Text And Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-ztyk6h large"
  >
    <i
      class="material-icons svelte-ztyk6h"
    >
      person
    </i>
     
    <span>
      Hey!
    </span>
  </button>
</section>
`;

exports[`Storyshots Components/Button Primary 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-ztyk6h primary"
  >
     
    <span>
      Primary
    </span>
  </button>
</section>
`;

exports[`Storyshots Components/Button Primary Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-ztyk6h primary iconOnly"
  >
    <i
      class="material-icons svelte-ztyk6h"
    >
      volume_up
    </i>
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Text And Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-ztyk6h"
  >
    <i
      class="material-icons svelte-ztyk6h"
    >
      face
    </i>
     
    <span>
      Hello
    </span>
  </button>
</section>
`;
